--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Loan Vulliard <lvulliard@cemm.oeaw.ac.at>"]
 version = "0.1.0"
 
 [deps]
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
