--- a/Project.toml
+++ b/Project.toml
@@ -1,10 +1,11 @@
 name = "RMP"
 uuid = "cef322dc-4d82-11ea-04a7-113231db804d"
 authors = ["Loan Vulliard <lvulliard@cemm.oeaw.ac.at>"]
-version = "0.2.1"
+version = "0.3.1"
 
 [deps]
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+Images = "916415d5-f1e6-5110-898d-aaa5f9f070e0"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
