--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 UMAP = "c4f8c510-2410-5be4-91d7-4fbaeb39457e"
 
 [compat]
+DataFrames = ">= 0.20"
 julia = "1"
 
 [extras]
