--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,17 +15,13 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - '1.1'
-          - '1.2'
-          - '1.3'
           - '1.4'
-          - '1.5'
-          # - '1'
-          # - 'nightly'
+          - '1'
+          - 'nightly'
         os:
-          # - ubuntu-latest
+          - ubuntu-latest
           - macOS-latest
-          # - windows-latest
+          - windows-latest
         arch:
           - x64
     steps:
