--- a/Project.toml
+++ b/Project.toml
@@ -28,7 +28,7 @@ UMAP = "^0.1.6"
 FileIO = "1"
 ImageMagick = "0.7, 1"
 Images = "0.17 - 0.24"
-julia = "1"
+julia = "^1.4"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
