Longer test set to avoid edge case and singularity

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -4,6 +4,10 @@ on:
     branches:
       - master
   push:
+    paths-ignore:
+    - '.github/**'
+    - 'CHANGELOG.md'
+    - 'docs/**'
     branches:
       - master
     tags: '*'
